changement de titre

--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<!DOCTYPE html>
+<html>
+     <head>
+          <title> changé le titre </title>
+     </head>
+     <body>
+     </body>
+</html>
